--- a/scss/blocks/offer/_offer.scss
+++ b/scss/blocks/offer/_offer.scss
@@ -1,5 +1,5 @@
 .offer {
-  padding: 70px 0 100px 0;
+  padding: 70px 0;
   position: relative;
   text-align: center;
 
