--- a/scss/blocks/order/_order.scss
+++ b/scss/blocks/order/_order.scss
@@ -1,5 +1,5 @@
 .order {
-  padding-bottom: 80px;
+  padding-bottom: 70px;
 
   @media screen and (max-width: 576px) {
     padding-bottom: 40px;
