--- a/scss/blocks/preview/_preview.scss
+++ b/scss/blocks/preview/_preview.scss
@@ -1,5 +1,5 @@
 .preview {
-  padding: 28px 0 100px 0;
+  padding: 28px 0 70px 0;
   position: relative;
 
   @media screen and (max-width: 576px) {
@@ -10,7 +10,6 @@
     text-align: center;
     font-weight: bold;
     font-size: 20px;
-    margin-left: 35px;
     margin-top: 35px;
   }
 }
